[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/gamenode.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font40.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/sprites/blue.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/blue_press.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/sfx_blue.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sprites/green.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/green_press.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/sfx_green.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sprites/yellow.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/yellow_press.png" type="Texture" id=10]
[ext_resource path="res://assets/sounds/sfx_yellow.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sprites/red.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/red_press.png" type="Texture" id=13]
[ext_resource path="res://assets/sounds/sfx_red.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sprites/music_off.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/backgroud_loading.png" type="Texture" id=16]

[node name="gamenode" type="Node"]

script/script = ExtResource( 1 )

[node name="feedback" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 83.0
margin/top = 225.0
margin/right = 123.0
margin/bottom = 265.0

[node name="panelFeedback" type="Panel" parent="feedback"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -12.0
margin/right = 567.0
margin/bottom = 101.0

[node name="Label" type="Label" parent="feedback/panelFeedback"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 567.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 2 )
text = "Aguarde!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panelPontos" type="Panel" parent="feedback"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 411.0
margin/top = 180.0
margin/right = 567.0
margin/bottom = 237.0

[node name="pontos" type="Label" parent="feedback/panelPontos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = -4.0
margin/right = 149.0
margin/bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buttonsPlayer" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 61.4354, 491.245 )

[node name="blueTouch" type="TouchScreenButton" parent="buttonsPlayer"]

editor/display_folded = true
transform/scale = Vector2( 1.52197, 1.52197 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="blueSound" type="StreamPlayer" parent="buttonsPlayer/blueTouch"]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="greenTouch" type="TouchScreenButton" parent="buttonsPlayer"]

editor/display_folded = true
transform/pos = Vector2( 0, 324.907 )
transform/scale = Vector2( 1.52197, 1.52197 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="greenSound" type="StreamPlayer" parent="buttonsPlayer/greenTouch"]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="yellowTouch" type="TouchScreenButton" parent="buttonsPlayer"]

editor/display_folded = true
transform/pos = Vector2( 314.186, 322.451 )
transform/scale = Vector2( 1.52197, 1.52197 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="yellowSound" type="StreamPlayer" parent="buttonsPlayer/yellowTouch"]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="redTouch" type="TouchScreenButton" parent="buttonsPlayer"]

editor/display_folded = true
transform/pos = Vector2( 313.546, -2.27206 )
transform/scale = Vector2( 1.52197, 1.52197 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="redSound" type="StreamPlayer" parent="buttonsPlayer/redTouch"]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="settings" type="Node2D" parent="."]

editor/display_folded = true

[node name="soundTouch" type="TouchScreenButton" parent="settings"]

visibility/visible = false
transform/pos = Vector2( 535.72, 36.1387 )
transform/scale = Vector2( 2.81594, 1.68809 )
normal = ExtResource( 15 )
pressed = ExtResource( 15 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="delay" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="resetGame" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="delayTurn" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="startGame" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="backgroud" type="Sprite" parent="."]

transform/pos = Vector2( 360, 640 )
z/z = -1
texture = ExtResource( 16 )

[connection signal="pressed" from="buttonsPlayer/blueTouch" to="." method="_on_blueTouch_pressed"]

[connection signal="pressed" from="buttonsPlayer/greenTouch" to="." method="_on_greenTouch_pressed"]

[connection signal="pressed" from="buttonsPlayer/yellowTouch" to="." method="_on_yellowTouch_pressed"]

[connection signal="pressed" from="buttonsPlayer/redTouch" to="." method="_on_redTouch_pressed"]

[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]

[connection signal="timeout" from="resetGame" to="." method="_on_resetGame_timeout"]

[connection signal="timeout" from="delayTurn" to="." method="_on_delayTurn_timeout"]

[connection signal="timeout" from="startGame" to="." method="_on_startGame_timeout"]


